--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="./WhatsApp Image.jpg"/>
     <hr/>
     <h2>Summary</h2>
-    <P>I am an individual passionate about tech; identifying people's problems and creatimg solutions to them by building websites and applications.</P>
+    <P>I'm an individual passionate about tech; identifying people's problems and creatimg solutions to them by building websites and applications.</P>
     <hr/>
     <h2>Education</h2>
     <p>
